--- a/index.html
+++ b/index.html
@@ -1,23 +1,272 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>phontu</title>
-</head>
-<body>
-    <div class="photo">
-        <img src="https://images.unsplash.com/photo-1627897495484-229b29feb0d5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8YmxhY2slMjBwZW9wbGV8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" alt="img1">
-        <img src="https://images.unsplash.com/photo-1543807535-eceef0bc6599?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8YmxhY2slMjBwZW9wbGV8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" alt="img2">
-        <img src="https://images.unsplash.com/photo-1570158268183-d296b2892211?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OXx8YmxhY2slMjBwZW9wbGV8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" alt="img3">
-        <img src="https://images.unsplash.com/photo-1531384441138-2736e62e0919?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTZ8fGJsYWNrJTIwcGVvcGxlfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60" alt="img4">
-        <img src="https://images.unsplash.com/photo-1492462543947-040389c4a66c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NDB8fGJsYWNrJTIwcGVvcGxlfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60" alt="img5">
-        <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTh8fHdoaXRlJTIwcGVvcGxlfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60" alt="img6">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Kidz World</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
+  <body>
+    <!-- Navigation  -->
+    <nav class="flex space-between">
+      <div>
+        <img src="./assets/kw-logo.png" alt="" />
+      </div>
+      <div id="cart" class="flex">
+        <img src="./assets/cart-icon.png" alt="" />
+        <p>Cart items (<span id="cart-value">0</span>)</p>
+      </div>
+    </nav>
+    <!-- Header  -->
+    <header>
+      <div class="flex header-text">
+        <h1>Shop.</h1>
+        <h1>Have Fun.</h1>
+        <h1>Repeat.</h1>
+        <h5>#NewAndNow</h5>
+      </div>
+    </header>
+    <!-- Books  -->
+    <div class="section-container flex">
+      <div class="section">
+        <h2>Discover New Books</h2>
+        <div class="container flex space-between">
+          <div>
+            <div>
+              <img class="books" src="./assets/book1.png" alt="" />
+              <h3>This was our pact</h3>
+              <h4>Ryan Andrews</h4>
+            </div>
+            <div class="buy flex space-between">
+              <p>$7.49</p>
+              <div id="book1" class="button flex space-evenly">
+                <h6>Add</h6>
+                <img src="./assets/cart-icon-white.png" alt="" />
+              </div>
+            </div>
+          </div>
+          <div>
+            <div>
+              <img
+                class="books"
+                src="http://i1.faceprep.in/prograd-junior/book2.png"
+                alt=""
+              />
+              <h3>The famous five</h3>
+              <h4>Guid Blyton</h4>
+            </div>
+            <div class="buy flex space-between">
+              <p>$4.59</p>
+              <div id="book2" class="button flex space-evenly">
+                <h6>Add</h6>
+                <img src="./assets/cart-icon-white.png" alt="" />
+              </div>
+            </div>
+          </div>
+          <div>
+            <div>
+              <img class="books" src="./assets/book3.png" alt="" />
+              <h3>Matlida</h3>
+              <h4>Roald Dahl</h4>
+            </div>
+            <div class="buy flex space-between">
+              <p>$6.80</p>
+              <div id="book3" class="button flex space-evenly">
+                <h6>Add</h6>
+                <img src="./assets/cart-icon-white.png" alt="" />
+              </div>
+            </div>
+          </div>
+          <div>
+            <div>
+              <img
+                class="books"
+                src="http://i1.faceprep.in/prograd-junior/book4.png"
+                alt=""
+              />
+              <h3>Harry Potter</h3>
+              <h4>JK Rowling</h4>
+            </div>
+            <div class="buy flex space-between">
+              <p>$10</p>
+              <div id="book4" class="button flex space-evenly">
+                <h6>Add</h6>
+                <img src="./assets/cart-icon-white.png" alt="" />
+              </div>
+            </div>
+          </div>
+          <div>
+            <div>
+              <img class="books" src="./assets/book5.png" alt="" />
+              <h3>For Young Readers</h3>
+              <h4>Ruskin Bond</h4>
+            </div>
+            <div class="buy flex space-between">
+              <p>$7.29</p>
+              <div id="book5" class="button flex space-evenly">
+                <h6>Add</h6>
+                <img src="./assets/cart-icon-white.png" alt="" />
+              </div>
+            </div>
+          </div>
+          <div>
+            <div>
+              <img class="books" src="./assets/book6.png" alt="" />
+              <h3>Wimpy Kid - DIY</h3>
+              <h4>Jeff Kinney</h4>
+            </div>
+            <div class="buy flex space-between">
+              <p>$4.99</p>
+              <div id="book6" class="button flex space-evenly">
+                <h6>Add</h6>
+                <img src="./assets/cart-icon-white.png" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
+      <!-- game  -->
+      <div class="section">
+        <h2>Discover New Games</h2>
+        <div class="container flex space-between">
+          <div>
+            <div>
+              <img class="games" src="./assets/dart-board.png" alt="" />
+              <h3>Dart Board</h3>
+              <h4>Wooden board, 16 inches</h4>
+            </div>
+            <div class="buy flex space-between">
+              <p>$17.49</p>
+              <div id="game1" class="button flex space-evenly">
+                <h6>Add</h6>
+                <img src="./assets/cart-icon-white.png" alt="" />
+              </div>
+            </div>
+          </div>
+          <div>
+            <div>
+              <img class="games" src="./assets/connect-four.png" alt="" />
+              <h3>Connect 4</h3>
+              <h4>Board game, multiplayer</h4>
+            </div>
+            <div class="buy flex space-between">
+              <p>$19.99</p>
+              <div id="game2" class="button flex space-evenly">
+                <h6>Add</h6>
+                <img src="./assets/cart-icon-white.png" alt="" />
+              </div>
+            </div>
+          </div>
+          <div>
+            <div>
+              <img class="games" src="./assets/jenga.png" alt="" />
+              <h3>Jenga</h3>
+              <h4>Wooden blocks, 54 pieces</h4>
+            </div>
+            <div class="buy flex space-between">
+              <p>$20.99</p>
+              <div id="game3" class="button flex space-evenly">
+                <h6>Add</h6>
+                <img src="./assets/cart-icon-white.png" alt="" />
+              </div>
+            </div>
+          </div>
+          <div>
+            <div>
+              <img class="games" src="./assets/monopoly.png" alt="" />
+              <h3>Monopoly</h3>
+              <h4>1.61 x 15.75 x 10.51 inches</h4>
+            </div>
+            <div class="buy flex space-between">
+              <p>$19.49</p>
+              <div id="game4" class="button flex space-evenly">
+                <h6>Add</h6>
+                <img src="./assets/cart-icon-white.png" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
+      <!-- Craft  -->
+      <div class="section">
+        <h2>Handmade with love</h2>
+        <div class="container flex space-between">
+          <div>
+            <div>
+              <img class="crafts" src="./assets/bookmarks.png" alt="" />
+              <h3>Bookmarks</h3>
+              <h4>Handmade with love</h4>
+            </div>
+            <div class="buy flex space-between">
+              <p>$12.49</p>
+              <div id="craft1" class="button flex space-evenly">
+                <h6>Add</h6>
+                <img src="./assets/cart-icon-white.png" alt="" />
+              </div>
+            </div>
+          </div>
+          <div>
+            <div>
+              <img class="crafts" src="./assets/birthday-card.png" alt="" />
+              <h3>Birthday card</h3>
+              <h4>Handmade with love</h4>
+            </div>
+            <div class="buy flex space-between">
+              <p>$19.99</p>
+              <div id="craft2" class="button flex space-evenly">
+                <h6>Add</h6>
+                <img src="./assets/cart-icon-white.png" alt="" />
+              </div>
+            </div>
+          </div>
+          <div>
+            <div>
+              <img class="crafts" src="./assets/stuffed-toy.png" alt="" />
+              <h3>Stuffed toys</h3>
+              <h4>Handmade with love</h4>
+            </div>
+            <div class="buy flex space-between">
+              <p>$15.99</p>
+              <div id="craft3" class="button flex space-evenly">
+                <h6>Add</h6>
+                <img src="./assets/cart-icon-white.png" alt="" />
+              </div>
+            </div>
+          </div>
+          <div>
+            <div>
+              <img class="crafts" src="./assets/dream-catcher.png" alt="" />
+              <h3>Dream catcher drawing</h3>
+              <h4>Handmade with love</h4>
+            </div>
+            <div class="buy flex space-between">
+              <p>$18.49</p>
+              <div id="craft4" class="button flex space-evenly">
+                <h6>Add</h6>
+                <img src="./assets/cart-icon-white.png" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-</body>
+
+    <!-- Footer section -->
+    <footer class="flex space-between">
+      <div>
+        <h2>Brought to you by</h2>
+        <img src="./assets/krishti.png" alt="" />
+      </div>
+      <div class="flex" id="details">
+        <h3>Krishti</h3>
+        <p>Made with love ♥️ by Kalvian</p>
+        <p>Talk to me at kristi@gmail.com</p>
+      </div>
+    </footer>
+
+    <script src="./app.js"></script>
+  </body>
 </html>
